[project]
name = "wholoo"
version = "0.1.0"
description = "Hulu API wrapper."
readme = "README.md"
requires-python = ">=3.14"
authors = [
  { name = "ryn-cx", email = "262888154+ryn-cx@users.noreply.github.com" }
]
dependencies = [
  "get-around",
  "good-ass-pydantic-integrator",
]

[dependency-groups]
dev = [
  "mypy>=2.2.0",
  "prek>=0.4.8",
  "pytest>=8.4.2",
  "ruff>=0.13.3",
  "ty>=0.0.58",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.ty.src]
exclude = ["**/models.py"]

[[tool.mypy.overrides]]
module = ["*.models", "models"]
ignore_errors = true

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]  # Asserts and missing docstrings allowed in tests.

[tool.uv.sources]
get-around = { git = "https://github.com/ryn-cx/get-around" }
good-ass-pydantic-integrator = { git = "https://github.com/ryn-cx/good-ass-pydantic-integrator" }
